Chore: Tailwind 설정 추가

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,2 +1,5 @@
-@import 'reset';
-@import 'global';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@import 'skinbook';
